--- a/All symbols pages/food.html
+++ b/All symbols pages/food.html
@@ -69,7 +69,7 @@
   <button  class="key"   onclick="document.getElementById('sound19').play();"> <img src="../images2\food and drinks\WATER.jpg     " alt="i" width="190px" height="190px">  </button>
 
  <audio id="sound14" src="../sounds2\goback.mp3" preload="auto"></audio>
-  <a  href="../index.htm"><button  class="key"   onclick="document.getElementById('sound14').play();"> <img src=" ../images2\goback.png  " alt="i" width="190px" height="190px">  </button></a>
+  <a  href="../index.html"><button  class="key"   onclick="document.getElementById('sound14').play();"> <img src=" ../images2\goback.png  " alt="i" width="190px" height="190px">  </button></a>
   </div>
   </div>
   </body>
