--- a/All symbols pages/people.html
+++ b/All symbols pages/people.html
@@ -47,7 +47,7 @@
      <button  class="key"   onclick="document.getElementById('sound11').play();"> <img src="../images2\people\TEACHER.png  " alt="i" width="190px" height="190px">  </button>
 
     <audio id="sound14" src="../sounds2\goback.mp3" preload="auto"></audio>
-  <a  href="../index.htm"><button  class="key"   onclick="document.getElementById('sound14').play();"> <img src=" ../images2\goback.png  " alt="i" width="190px" height="190px">  </button></a>
+  <a  href="../index.html"><button  class="key"   onclick="document.getElementById('sound14').play();"> <img src=" ../images2\goback.png  " alt="i" width="190px" height="190px">  </button></a>
   </div>
 </div>
   </body>
